--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moviesapi",
+  "name": "movieapi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,12 +7,20 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "James L",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wjal/moviesAPI.git"
+  },
+  "author": "James Little",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/wjal/moviesAPI/issues"
+  },
+  "homepage": "https://github.com/wjal/moviesAPI#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.3"
+    "mongoose": "^6.9.2"
   }
 }
